# netbox-cloudflare-plugin

./: MANIFEST.in  README.md  docker-compose.testing.yml  pyproject.toml
.github/workflows/: main_ci.yml  pr_ci.yml  tags_cd.yml
netbox_cloudflare_plugin/: __init__.py  filtersets.py  forms.py  models.py  navigation.py  signals.py  tables.py  urls.py  views.py
netbox_cloudflare_plugin/api/: serializers.py  urls.py  views.py
netbox_cloudflare_plugin/migrations/: 0001_initial.py  0002_alter_dnsrecord_record_id.py  0003_remove_dnsrecord_netbox_cloudflare_plugin_dnsrecord_unique_zone_name_type_content_and_more.py
netbox_cloudflare_plugin/templates/netbox_cloudflare_plugin/: dnsrecord.html  no_edit_base.html  zoneaccount.html
netbox_cloudflare_plugin/tests/: test_init.py
netbox_cloudflare_plugin/tests/dnsrecord/: test_dnsrecord_api.py
netbox_cloudflare_plugin/tests/mockserver/config/: initializerJson.json
netbox_cloudflare_plugin/tests/utilities/: test_cloudflare_dns_client.py
netbox_cloudflare_plugin/tests/zoneaccount/: test_zoneaccount_api.py
netbox_cloudflare_plugin/utilities/: cloudflare_dns_client.py
netbox_configuration/: configuration_testing.py
